Closed Bug 1231633 Opened 10 years ago Closed 10 years ago

[Static Analysis][Uninitialized scalar field] Function nsDocShellLoadInfo from nsDocShellLoadInfo.cpp

Categories

(Core :: DOM: Navigation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1325963)

Attachments

(1 file, 1 obsolete file)

The Static Analysis tool Coverity added that variable member mLoadReplace is not attributed a value in the constructor: nsDocShellLoadInfo::nsDocShellLoadInfo() Most likely this is not a bug looking through code but i think we should still give it an ivitial value (false), as the rest of the scalar have.
Attached patch Bug 1231633.diff (obsolete) — Splinter Review
Attachment #8697233 - Flags: review?(bzbarsky)
Comment on attachment 8697233 [details] [diff] [review] Bug 1231633.diff While you're here, do you mind moving mLoadReplace to right after mOwner? The current setup is just silly alignment-wise. r=me
Attachment #8697233 - Flags: review?(bzbarsky) → review+
Attached patch Bug 1231633.diffSplinter Review
Sure here are the changes. Setting it to checkin-needed.
Attachment #8697233 - Attachment is obsolete: true
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: