Bug 1231633 - give scalar mLoadReplace a default value. r=bz